# Tenth_eval

./: README.md  logger.py  main.py  pyproject.toml  requirements.txt  run_all.py  test.py  verify_marker.py
.devcontainer/: devcontainer.json
api/: main.py
app/: agent.py  config.py  graph.py  prompts.py  states.py  vector_store.py
app/utils/: image_marker.py
frontend/: stremlit.py
frontend-next/: package-lock.json  package.json  tailwind.config.ts
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/components/: EvaluationViewer.tsx
